--- a/frontend/src/styles/NotePage.module.css
+++ b/frontend/src/styles/NotePage.module.css
@@ -7,3 +7,13 @@
 .note:hover {
     border: 1px solid red;
 }
+
+.notesPage {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.notesGrid {
+    width: 100%;
+}
