--- a/frontend/src/styles/Note.module.css
+++ b/frontend/src/styles/Note.module.css
@@ -1,11 +1,12 @@
 .noteCard {
-    background-color: cornsilk;
+    background-color: #ecf3fe;
    
 }
 
 .cardBody {
     overflow: hidden;
     mask-image: linear-gradient(180deg, #000 60%, transparent);
+
 }
 
 .cardText {
