--- a/frontend/src/styles/NotePage.module.css
+++ b/frontend/src/styles/NotePage.module.css
@@ -5,7 +5,7 @@
 }
 
 .note:hover {
-    border: 1px solid red;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 }
 
 .notesPage {
